--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
 <body class="bg-black m-0">
     <section
-        class="gap-24 flex justify-center items-center w-[100vw] h-[96vh] bg-[url('./assets/img/HomeBkg.png')] bg-cover bg-no-repeat bg-center">
+        class="homephone gap-24 flex justify-center items-center w-[100vw] h-[96vh] bg-[url('./assets/img/HomeBkg.png')] bg-cover bg-no-repeat bg-center">
 
-        <div class="flex flex-col gap-20">
-            <img class="w-[4vw]" src="assets/img/Logo.webp" alt="Logo">
+        <div class="flex flex-col gap-20 leftsidephone">
+            <img class="w-[4vw] logophone" src="assets/img/Logo.webp" alt="Logo">
             <div>
                 <h2 class="text-white text-3xl">
                     <span class="font-bold">Design </span>
@@ -37,7 +37,7 @@
                 </a>
                 <a target="_blank" href="https://kondesignpt.com/orcamento">
                     <button
-                        class="buy-button text-white rounded-lg py-2 px-14 hover:scale-105 transition-all duration-300">
+                        class="cotacaobuttonphone buy-button text-white rounded-lg py-2 px-14 hover:scale-105 transition-all duration-300">
                         Cotação online
                     </button>
                 </a>
@@ -45,9 +45,9 @@
         </div>
 
         <div>
-            <img class="w-[23.5vw] relative right-8" src="assets/img/PhotoPrinter.webp" alt="Printer">
+            <img class="w-[23.5vw] relative right-8 imgphone" src="assets/img/PhotoPrinter.webp" alt="Printer">
         </div>
-        <div class="text-white flex flex-col items-end gap-5 relative right-8">
+        <div class="text-white flex flex-col items-end rightmenuphone gap-5 relative right-8 rightsidephone">
             <a href="https://kondesignpt.com/"><p class="hover:text-[#ffbb00] hover:cursor-pointer transition-all duration-100">Home</p></a>
             <a href="https://kondesignpt.com/#sobre"><p class="hover:text-[#ffbb00] hover:cursor-pointer transition-all duration-100">Sobre Nós</p></a>
             <a href="https://kondesignpt.com/#servicos"><p class="hover:text-[#ffbb00] hover:cursor-pointer transition-all duration-100">Serviços</p></a>
