--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="author" content="Kennedy Guerra">
+    <meta name="robots" content="index,follow">
+    <meta name="description" content="É simplesmente a solução em Impressão Digital e Design gráfico que você tanto procura! Disponibilizamos modelos com designs bem modernos">
+    <meta name="keywords" content="Grafica, Grafica Porto">
+    <meta name="reply-to" content="comercial@kondesignpt.com">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css">
